@@ -166,4 +166,7 @@ Error: Signature mismatch:
 #     type 'a t = T : 'a s -> 'a t [@@unboxed]
 #           type _ s = S : 'a t -> 'b s [@@unboxed]
 and _ t = T : 'a -> 'a s t
+#             type 'a s
+type ('a, 'p) t = private 'a s
+type 'a packed = T : ('a, 'b) t -> 'a packed [@@unboxed]
 # 
